--- a/src/backend/assets/static-content/registrationCompleted.html
+++ b/src/backend/assets/static-content/registrationCompleted.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1>Welcome!!</h1>
+<p>Registration completed.</p>
+<a href="http://deepscheduler.sytes.net">Go to site</a>
 
 </body>
+<style>
+    body{
+        display: flex;
+        flex-direction: column;
+        font-family: 'Montserrat' sans-serif;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
 </html> 
